2006-03-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: add check_ruby_header to warn when
	    broken darwin ruby.
	    add export #{ld_path} in check_instant_client().

2006-02-26  KUBO Takehiro  <kubo@jiubao.org>
	release as 0.1.14.
	* ext/oci8/const.c: add OCI_PTYPE_UNK.

2006-02-25  KUBO Takehiro  <kubo@jiubao.org>
	* Makefile: change version to 0.1.14.
	* ext/oci8/bind.c: fix to accept OCIBind#set(aNumeric).
	* ext/oci8/extconf.rb: change version to 0.1.14.
	    fix to compile ocinumber.c also.
	* ext/oci8/oci8.h: add set_oci_vnumber() prototype.
	* ext/oci8/ocinumber.c: add a new file for set_oci_vnumber().
	* lib/oci8.rb.in: setup OCI environment as an object mode.

2006-02-17  KUBO Takehiro  <kubo@jiubao.org>
	* README: fix documentation bug.
	* ext/oci8/attr.c: add attrGet(OCI_ATTR_SERVER) and attrSet(OCI_ATTR_DESC_PUBLIC, -1).
	* ext/oci8/env.c: delete code to register malloc/realloc/free callbacks.
	* ext/oci8/handle.c: free memory by calling xfree(), not by free()
	   in oci8_handle_cleanup().
	* lib/oci8.rb.in: use OCIEnv#logon for non-privilege login.
	    add OCI8#prefetch_rows= and OCI8::Cursor#prefetch_rows=.
	    use @srv instead of @svc in OCI8#non_blocking= for
	    non-privilege login.
	* lib/DBD/OCI8/OCI8.rb: fix to work with ruby-oci8 0.1 and ruby-oci8 0.2 either.

2005-10-15  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/handle.c: fix memory leaks. 700k per 10000 queries.
	  fixed by Nathaniel Talbott. Thank you!
	* ext/oci8/oraconf.rb: add -R to linker on Solaris and Linux.
	  http://rubyforge.org/tracker/index.php?func=detail&aid=2148&group_id=256&atid=1051
	* lib/oci8.rb.in: add DateTime suppport. suggested by Daniel Berger.
	* test/test_dbi.rb, test/test_oci8.rb: testcases for DateTime.
	* test/test_oradate.rb: delete an unsuccessfull testcase, which depends on libc implementation.
	* README: add bind-types.
	* Makefile, ext/oci8/extconf.rb: change version to 0.1.13.

2005-07-20  KUBO Takehiro  <kubo@jiubao.org>