@@ -21,7 +21,7 @@
 
 == Oracle Instant Client
 
-1. donwload Oracle Instant Client Packages - Basic and SDK.
+1. donwload "Instant Client Package - Basic" and "Instant Client Package - SDK".
 
    OTN (Oracle Technology Network):
      URL:http://otn.oracle.com/
